[package]
name = "faf-replay-cli"
version = "0.1.0"
authors = ["brutus5000"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
base64 = "0.13.0"
tempfile = "3.1.0"
flate2 = "1.0.18"

[profile.release]
# Optimize for binary size.
codegen-units = 1
opt-level = 'z'
lto = true
